--- a/exemplo/exemplo.html
+++ b/exemplo/exemplo.html
@@ -82,6 +82,9 @@
                             <li>
                                 <a href="#imageVideo">Imagem e Vídeo</a>
                             </li>
+                            <li>
+                                <a href="#menu">Menu</a>
+                            </li>
                         </ul>
 
                     </nav>
@@ -175,6 +178,43 @@
                         </div>
                         <!--tipografia-->
 
+                        <!-- Menu Horizontal -->
+                        <h2 id="menu">Menu</h2>
+                        <h3>Menu Horizontal</h3>
+
+                        <p>
+                            A criação de menus pode ser feita adicionando-se a classe <code>.menu-horizontal</code>
+                            em uma <code>&lt;ul&gt;</code>.
+                        </p>
+
+                        <p>
+                            Código HTML
+                            <br>
+
+<pre><code>
+&lt;ul class=".menu-horizontal"&gt;
+    &lt;li&gt; Item 1 &lt;/li&gt;
+    &lt;li&gt; Item 2 &lt;/li&gt;
+    &lt;li&gt; Item 3 &lt;/li&gt;
+&lt;/ul&gt;
+</code></pre>
+
+                        </p>
+
+                        <div class="exemplo">
+                            <div class="menu-horizontal">
+                                <ul>
+                                    <li><a href="#">Cadastro</a></li>
+                                    <li><a href="#">Lançamentos</a></strong></li>
+                                    <li><a href="#">Compras</a></li>
+                                    <li><a href="#">Contatos</a></li>
+                                    <li><a href="#">Quem somos</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        
+
 
                         <!--imagens e videos-->
                         <div class="row">
@@ -207,7 +247,7 @@
                                     <p>Exemplo</p>
 
 <pre><code>&lt;div class="fluid-video"&gt;
-&lt;iframe width="560" height="315" src="..." frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
+&lt;iframe width="560" height="315" src="..." frameborder="0" allowfullscreen&gt; &lt;/iframe&gt;
 &lt;/div&gt;</code></pre>
                                 </div>
 
